--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
 Test with
-<a href="render?remoteURL=https://facebook.com">render?remoteURL=https://facebook.com</a>
+<ul>
+<li>
+<a href="pdf?remoteURL=https://facebook.com">pdf?remoteURL=https://facebook.com</a>
+</li>
+<li>
+<a href="pdf?remoteURL=https://google.com">pdf?remoteURL=https://google.com</a>
+</li>
+</ul>
